# sse-llm-streaming-service

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISIONS_EXPLANATION.md  DOCKER_NETWORK.md  Dockerfile  END_TO_END_FLOW_GUIDE.md  SYSTEM_DESIGN_ARCHITECTURE.md  docker-compose.yml  fix_imports.py  pyproject.toml  pytest.ini  requirements.txt  start_app.py  stop_services.py
docs/: LOAD_BALANCER_INTEGRATION.md  METRICS_CATALOG.md  PROMETHEUS_GUIDE.md
docs/architecture-decisions/: 001-multi-tier-caching.md  002-circuit-breaker-redis.md  003-hash-based-sampling.md  004-provider-failover.md  005-queue-backpressure-load-shedding.md  006-connection-pool-backpressure.md  007-message-queue-failover.md  008-event-driven-pubsub-optimization.md  009-fastapi-dependency-injection-pattern.md  010-structured-logging-pii-redaction.md  011-security-headers-middleware.md  012-async-await-architecture.md  013-validation-framework-security.md  014-middleware-execution-order.md  015-custom-lru-cache-implementation.md  016-provider-factory-lazy-initialization.md  017-deterministic-hash-based-sampling.md  019-cors-configuration-strategy.md  020-api-versioning-strategy.md  README.md
docs/infrastructure/: DEPLOYMENT_GUIDE.md
infrastructure/: README.md  manage.py
infrastructure/grafana/: README.md
infrastructure/nginx/: NGINX_LOAD_BALANCING.md  README.md  VERIFICATION_REPORT.md  nginx.conf
infrastructure/prometheus/: README.md  prometheus.yml
performance_dashboard/: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage_dashboard_ops.py  nginx.conf  package-lock.json  package.json  start_dashboard.ps1  start_dashboard.py  start_dashboard.sh  tailwind.config.js  vite.config.js
performance_dashboard/src/: App.jsx  api.js  index.css
performance_experiments/: walkthrough.md
performance_experiments/dashboard/: index.html  package-lock.json
src/: __init__.py  app.py
src/api/: __init__.py  admin_routes.py  health_routes.py  streaming_routes.py
src/application/: README.md  app.py
src/caching/: __init__.py  cache_manager.py
src/config/: __init__.py  constants.py  provider_registration.py  settings.py
src/core/: README.md  __init__.py  exceptions.py  execution_tracker.py  interfaces.py  logging.py  redis.py
src/llm_providers/: __init__.py  (+6 more)
tests/: README.md  TESTING_STRATEGY.md  conftest.py
(+127 files in other folders)
